--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
-    "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
@@ -45,6 +44,7 @@
     "@chromatic-com/storybook": "^4.0.1",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.16.0",
+    "@grafana/faro-webpack-plugin": "^0.5.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@storybook/addon-a11y": "^9.0.16",
     "@storybook/addon-docs": "^9.0.16",
